--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
     "bootstrap": "v4.0.0-alpha.6",
     "animate.css": "^3.5.2",
     "font-awesome": "^4.7.0",
-    "github-markdown-css": "^2.6.0"
+    "github-markdown-css": "^2.6.0",
+    "typeahead.js": "^0.11.1"
   },
   "overrides": {
     "bootstrap": {
