--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jquery": "^3.2.1",
     "log4js": "^1.1.1",
     "marked": "^0.3.6",
-    "monaco-editor": "^0.8.3"
+    "monaco-editor": "^0.8.3",
+    "nodegit": "^0.18.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^3.0.1",
