--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "fs-promise": "^2.0.2",
+    "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
     "jquery": "^3.2.1",
     "marked": "^0.3.6",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/fs-extra": "^3.0.1",
     "@types/fs-promise": "^1.0.3",
+    "@types/highlight.js": "^9.1.9",
     "@types/html-entities": "^1.2.15",
     "@types/jquery": "^2.0.41",
     "@types/log4js": "0.0.32",
