--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "highlight.js": "^9.12.0",
     "html-entities": "^1.2.1",
     "jquery": "^3.2.1",
+    "markdown-it": "^8.3.1",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "monaco-editor": "^0.9.0",
@@ -24,6 +25,7 @@
     "@types/html-entities": "^1.2.15",
     "@types/jquery": "^2.0.41",
     "@types/log4js": "0.0.32",
+    "@types/markdown-it": "0.0.2",
     "@types/marked": "0.0.28",
     "@types/node": "^7.0.12",
     "@types/typeahead": "^0.11.28",
