--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-install": "^1.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.6",
     "main-bower-files": "^2.13.1",
     "rimraf": "^2.6.1",
