--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
     "typescript": "^3.0.1",
+    "typescript-eslint-parser": "^18.0.0",
     "vue": "^2.5.17",
     "webpack": "^4.16.5"
   },
   "dependencies": {
     "iview": "^3.0.0",
+    "monaco-editor": "^0.14.2",
     "source-map-support": "^0.5.6"
   }
 }
