--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,29 @@
 {
   "compilerOptions": {
-		"module": "es6",
+    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "node",
 		"noImplicitAny": false,
 		"removeComments": false,
 		"preserveConstEnums": false,
-		"target": "es5",
 		"experimentalDecorators": true,
 		"declaration": false,
 		"noImplicitReturns": true,
-		"noUnusedLocals": false,
 		"noImplicitThis": true,
-		"alwaysStrict": true,
+    "alwaysStrict": true,
+    // "noUnusedLocals": true,
+    // "noFallthroughCasesInSwitch": true,
+    "inlineSources": true,
+    "sourceMap": true,
+
+    "allowSyntheticDefaultImports": true,
+
+    "newLine": "lf",
+
+    // "noEmitOnError": true,
+
+    "typeRoots": [
+			"typings"
+		],
 	},
-  "extends": "./node_modules/electron-webpack/tsconfig-base.json"
 }
