--- a/package.json
+++ b/package.json
@@ -1,45 +1,30 @@
 {
-  "name": "husky",
+  "name": "husky-note",
   "productName": "Husky Note",
-  "version": "1.4.0",
-  "main": "src/main.js",
+  "version": "3.0.0-alpha",
+  "license": "MIT",
+  "main": "src/background.js",
   "scripts": {
-    "build": "gulp --gulpfile build/gulpfile.js build"
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "debug": "node debug.js"
   },
-  "private": true,
   "dependencies": {
-    "fs-promise": "^2.0.2",
-    "highlight.js": "^9.12.0",
-    "html-entities": "^1.2.1",
-    "jquery": "^3.2.1",
-    "markdown-it": "^8.3.1",
-    "marked": "^0.3.6",
-    "moment": "^2.18.1",
-    "monaco-editor": "^0.9.0",
-    "nodegit": "^0.18.3"
+    "vue": "^2.6.12",
+    "vuetify": "^2.4.3"
   },
   "devDependencies": {
-    "@types/fs-extra": "^3.0.1",
-    "@types/fs-promise": "^1.0.3",
-    "@types/highlight.js": "^9.1.9",
-    "@types/html-entities": "^1.2.15",
-    "@types/jquery": "^2.0.41",
-    "@types/log4js": "0.0.32",
-    "@types/markdown-it": "0.0.2",
-    "@types/marked": "0.0.28",
-    "@types/node": "^7.0.12",
-    "@types/typeahead": "^0.11.28",
-    "babel-preset-env": "^1.4.0",
-    "gulp": "^3.9.1",
-    "gulp-atom-electron": "^1.10.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-install": "^1.1.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.1.6",
-    "main-bower-files": "^2.13.1",
-    "rimraf": "^2.6.1",
-    "typescript": "^2.2.2"
+    "@vue/cli-service": "^4.5.11",
+    "electron": "^11.2.3",
+    "electron-devtools-installer": "^3.1.1",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "typescript": "^4.1.3",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.6",
+    "vue-cli-plugin-vuetify": "^2.1.0",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.7.2"
   }
 }
