--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "debug": "node debug.js"
   },
   "dependencies": {
+    "monaco-editor": "^0.26.1",
+    "monaco-editor-vue": "^1.0.10",
     "vue": "^2.6.12",
     "vuetify": "^2.4.3"
   },
@@ -19,6 +21,7 @@
     "@vue/cli-service": "^4.5.11",
     "electron": "^11.2.3",
     "electron-devtools-installer": "^3.1.1",
+    "monaco-editor-webpack-plugin": "^4.1.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "typescript": "^4.1.3",
