--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "name": "husky-note",
-  "productName": "Husky Note",
   "version": "3.0.0-alpha",
-  "license": "MIT",
-  "main": "src/background.js",
   "scripts": {
+    "debug": "node debug.js",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
-    "debug": "node debug.js"
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "src/background.js",
   "dependencies": {
     "monaco-editor": "^0.26.1",
     "vue": "^2.6.12",
     "vuetify": "^2.4.3"
   },
   "devDependencies": {
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "^4.5.11",
     "electron": "^11.2.3",
     "electron-devtools-installer": "^3.1.1",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
-    "typescript": "^4.1.3",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-electron-builder": "^2.0.0-rc.6",
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.2"
-  }
+  },
+  "license": "MIT",
+  "productName": "Husky Note"
 }
