--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "vuetify": "^2.4.3"
   },
   "devDependencies": {
+    "@types/node": "^16.4.10",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "^4.5.11",
-    "electron": "^11.2.3",
+    "electron": "^13.1.7",
     "electron-devtools-installer": "^3.1.1",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-electron-builder": "^2.0.0-rc.6",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.2"
