fix some syntax error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,13 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/vuetify/types"
+    ],
     "types": [
       "webpack-env",
-      "node"
+      "node",
+      "vuetify"
     ],
     "paths": {
       "@/*": [
