--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "src/background.js",
+  "main": "background.js",
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "monaco-editor": "^0.26.1",
